--- a/HC_netCore/appsettings.json
+++ b/HC_netCore/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MasterDatabase": "Server=tcp:hcaspnetcore.database.windows.net,1433;Initial Catalog=db_to-do;Persist Security Info=False;User ID=hcadmin;Password=DBceo!@888;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
